--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <p id="sum-el">Sum:</p>
       <button id="start-btn" onclick="startGame()">START GAME</button>
       <button id="new-btn" onclick="newCard()">NEW CARD</button>
+      <p id="player-el"></p>
     </div>
 
     <script src="./index.js"></script>
